test/scc/expr/semantic-errors/157.t
void test()
{
    char a[] = { "str", "ing" };
}